CanvasThumbnail: tried to fix overlapping issue

--- a/src/sass/components/_canvas-thumbnail.sass
+++ b/src/sass/components/_canvas-thumbnail.sass
@@ -27,6 +27,10 @@
   position: relative
   border: 2px solid $c-lighter-gray
 
+  canvas
+    max-width: 100%
+    max-height: 100%
+
 .c-canvas-thumbnail.is-active .c-canvas-thumbnail__image_container
   border: 2px solid $c-red
 
